# DanceBotsEditor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE_3RD_PARTY  README.md  template.vcxproj.in
.github/workflows/: macos_build.yml  macos_build_release.yml  macos_build_test.yml  qt_build.yml  ubuntu_build.yml  ubuntu_build_test.yml  windows_build.yml  windows_build_test.yml
gui/: CMakeLists.txt  main.cc  main.cpp  main.qml  qml.qrc
gui/GuiStyle/: Style.qml  qmldir
gui/components/: .gitignore  AboutPopup.qml  AboutText.qml  AboutText.qml.in  AudioControl.qml  ConfirmPopup.qml  DirectionRadio.qml  DiscreteSlider.qml  Dragger.qml  Faders.qml  FileProcessPopup.qml  FractionDisplay.qml  FrequencySlider.qml  Ghost.qml  GuiToolTip.qml  LEDPrimitiveControl.qml  LoadProcessPopup.qml  MP3FileControl.qml  MotorPrimitiveControl.qml  MotorPrimitiveDelegate.qml  PrimitiveDelegate.qml  PrimitiveToolTip.qml  ScalableSlider.qml  TimerBar.qml  TitleBar.qml  ToolTipTexts.qml  TypeRadio.qml  qmldir
gui/mac_os_rc/: Info.plist  applogo.icns  deploy.sh
gui/rc/: icon.rc
lib/: CMakeLists.txt
lib/cmake/: version.cmake
lib/lame-3.100/: CMakeLists.txt
mp3_file_samples/: samples_credits.txt
scripts/: README.md  lint.bat  lint.sh  run_tests.sh  setup.sh
src/: AudioFile.cpp  AudioFile.h  AudioFile.hpp  AudioPlayer.cpp  AudioPlayer.h  BackEnd.cpp  BackEnd.h  BackEnd.hpp  BeatDetector.cpp  BeatDetector.h  BeatDetector.hpp  Primitive.cpp  Primitive.h  PrimitiveList.cpp  PrimitiveList.h  PrimitiveToSignal.cpp  PrimitiveToSignal.h  Utils.h  audio_file.cc  audio_file.h  audio_player.cc  audio_player.h  backend.cc  backend.h  beat_detector.cc  beat_detector.h  primitive.cc  primitive.h  primitive_list.cc  primitive_list.h  primitive_to_signal.cc  primitive_to_signal.h  utils.h
src/wix/: Dancebots.wxs  LICENSE.rtf  generateWix.py
test/: .gitignore  CMakeLists.txt  TestFolderPath.in  test_folder_path.h  test_folder_path.in
test/test_audiofile/: CMakeLists.txt  main.cc  main.cpp
test/test_audioplayer/: CMakeLists.txt  DummyUI.cpp  DummyUI.h  dummy_ui.cc  dummy_ui.h  main.cc  main.cpp
test/test_beatdetect/: CMakeLists.txt  main.cc  main.cpp
test/test_gtest/: CMakeLists.txt  main.cpp
test/test_kissfft/: CMakeLists.txt  main.cc  main.cpp
test/test_lame/: CMakeLists.txt  main.cpp
test/test_libraries/: CMakeLists.txt  main.cpp
test/test_primitives/: CMakeLists.txt  main.cc  main.cpp
test/test_qaudiodecoder/: CMakeLists.txt  main.cpp
test/test_utils/: CMakeLists.txt  main.cc  main.cpp
